// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple choices 1`] = `
<form
  class="s-_xyHwNw5vPU9"
  role="dialog"
>
  <div
    class="pane s-j2LTsWktqK_4"
  >
    <header
      class="heading s-_xyHwNw5vPU9"
    >
      A vos marques...
    </header>
     
    <section
      class="s-_xyHwNw5vPU9"
    >
      <label
        class="s-AFGyPIu2lLfy"
        for="side"
      >
        Couleur : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="s-NMyTiX1zi6rz"
            id="side"
            role="combobox"
          >
            
            <span
              class="text s-NMyTiX1zi6rz"
            >
              black
            </span>
            
            
             
            <i
              class="material-icons arrow s-rGIwyFRHo8D9"
              role="button"
              tabindex="-1"
            >
              arrow_drop_down
            </i>
            
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
      </span>
      <!--&lt;Choice&gt;-->
      
      <label
        class="s-AFGyPIu2lLfy"
        for="position"
      >
        Suite : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="s-NMyTiX1zi6rz"
            id="position"
            role="combobox"
          >
            
            <span
              class="text s-NMyTiX1zi6rz"
            >
              Trèfle
            </span>
            
            
             
            <i
              class="material-icons arrow s-rGIwyFRHo8D9"
              role="button"
              tabindex="-1"
            >
              arrow_drop_down
            </i>
            
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
        <img
          alt=""
          class="s-AFGyPIu2lLfy"
          src="http://localhost:3001/games/french-suited-card/images/clubs-1.svg"
        />
      </span>
      <!--&lt;Choice&gt;-->
      
    </section>
     
    <div
      class="s-_xyHwNw5vPU9"
    >
      <button
        class="s-NMyTiX1zi6rz"
        type="submit"
      >
        
        <span
          class="text s-NMyTiX1zi6rz"
        >
          Jouer
        </span>
        
        
      </button>
      <!--&lt;Button&gt;-->
    </div>
  </div>
  <!--&lt;Pane&gt;-->
</form>
`;

exports[`Single choice 1`] = `
<form
  class="s-_xyHwNw5vPU9"
  role="dialog"
>
  <div
    class="pane s-j2LTsWktqK_4"
  >
    <header
      class="heading s-_xyHwNw5vPU9"
    >
      A vos marques...
    </header>
     
    <section
      class="s-_xyHwNw5vPU9"
    >
      <label
        class="s-AFGyPIu2lLfy"
        for="side"
      >
        Couleur : 
      </label>
       
      <span
        class="s-AFGyPIu2lLfy"
      >
        <span
          class="wrapper s-rGIwyFRHo8D9"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="s-NMyTiX1zi6rz"
            id="side"
            role="combobox"
          >
            
            <span
              class="text s-NMyTiX1zi6rz"
            >
              Noirs
            </span>
            
            
             
            <i
              class="material-icons arrow s-rGIwyFRHo8D9"
              role="button"
              tabindex="-1"
            >
              arrow_drop_down
            </i>
            
          </button>
          <!--&lt;Button&gt;-->
           
          
          <!--&lt;Menu&gt;-->
        </span>
        <!--&lt;Dropdown&gt;-->
         
      </span>
      <!--&lt;Choice&gt;-->
      
    </section>
     
    <div
      class="s-_xyHwNw5vPU9"
    >
      <button
        class="s-NMyTiX1zi6rz"
        type="submit"
      >
        
        <span
          class="text s-NMyTiX1zi6rz"
        >
          Jouer
        </span>
        
        
      </button>
      <!--&lt;Button&gt;-->
    </div>
  </div>
  <!--&lt;Pane&gt;-->
</form>
`;
